// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Tandem passenger confirmations (e2e) /tandem/passenger-confirmations (GET) 1`] = `
{
  "canUseData": true,
  "date": "2024-01-01T00:00:00.000Z",
  "email": "email",
  "firstname": "firstname",
  "lastname": "lastname",
  "phone": "phone",
  "place": "place",
  "signature": "signature",
  "signatureMimeType": "image/svg+xml",
  "tandemSchool": null,
  "validation": {
    "fullyUnderstoodInstructions": true,
    "noHealthProblems": true,
    "understandRisks": true,
    "undertakePilotInstructions": true,
  },
}
`;

exports[`Tandem passenger confirmations (e2e) /tandem/passenger-confirmations (POST) 1`] = `
{
  "canUseData": true,
  "date": "2024-01-01T00:00:00.000Z",
  "email": "email",
  "firstname": "firstname",
  "lastname": "lastname",
  "phone": "phone",
  "place": "place",
  "signature": "signature",
  "signatureMimeType": "image/svg+xml",
  "validation": {
    "fullyUnderstoodInstructions": true,
    "noHealthProblems": true,
    "understandRisks": true,
    "undertakePilotInstructions": true,
  },
}
`;
